# bazel-mobile-journey

./: .bazelrc  .gitignore  .pre-commit-config.yaml  MODULE.bazel  maven_install.json  renovate.json  requirements-dev.txt
.github/workflows/: build.yml  format.yml
android/: README.md
android/app_with_dependencies/: BUILD
android/app_with_dependencies/src/main/: AndroidManifest.xml
android/app_with_dependencies/src/main/java/com/example/appwithdependencies/: MainActivity.java
android/app_with_dependencies/src/main/java/com/example/sample/: MainActivity.java
android/app_with_dependencies/src/main/res/layout/: activity_main.xml
android/app_with_dependencies/src/main/res/values/: strings.xml  styles.xml
android/kotlin_app/: BUILD
android/kotlin_app/src/main/: AndroidManifest.xml
android/kotlin_app/src/main/kotlin/com/example/kotlinapp/: MainActivity.kt
android/kotlin_app/src/main/kotlin/com/example/sample/: MainActivity.kt
android/kotlin_app/src/main/kotlin/com/example/simple/: MainActivity.kt
android/kotlin_app/src/main/res/layout/: activity_main.xml
android/kotlin_app/src/main/res/values/: strings.xml
android/simple_app/: BUILD
android/simple_app/src/main/: AndroidManifest.xml
android/simple_app/src/main/java/com/example/sample/: MainActivity.java
android/simple_app/src/main/java/com/example/simple/: MainActivity.java
android/simple_app/src/main/java/com/example/simpleapp/: MainActivity.java
android_kotlin/: BUILD
android_kotlin/src/main/res/values/: styles.xml
android_simple/app/: BUILD
android_simple/app/src/main/res/layout/: activity_main.xml
android_simple/src/main/res/values/: strings.xml
ios/simple_swift_app/: BUILD  Info.plist
ios/simple_swift_app/Sources/: AppDelegate.swift  LaunchScreen.storyboard  SceneDelegate.swift  ViewController.swift
tools/: bazel_version.py  bazel_version_test.py
tools/pre-commit/: run-buildifier.py  run-clang-format.py  run-google-java-format.py  run-ktfmt.py  run-swift-format.py
