"""
This module contains build rules for Bazel Mobile Journey.
"""

module(
    name = "bazel_mobile_journey",
)

bazel_dep(
    name = "rules_java",
    version = "8.13.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.7",
)
bazel_dep(
    name = "rules_android",
    version = "0.6.5",
)
bazel_dep(
    name = "rules_kotlin",
    version = "2.1.8",
)
bazel_dep(
    name = "rules_apple",
    version = "3.22.0",
)
bazel_dep(
    name = "rules_swift",
    version = "2.9.0",
)
bazel_dep(
    name = "platforms",
    version = "0.0.11",
)
bazel_dep(
    name = "apple_support",
    version = "1.22.1",
    repo_name = "build_bazel_apple_support",
)

git_override(
    module_name = "rules_android",
    commit = "d844c29196708a093985093de9ada35763c53049",
    remote = "https://github.com/bc-lee/rules_android",
)

git_override(
    module_name = "rules_jvm_external",
    commit = "9305c1c28aa6df1dab31a9d6e5a119996d467d3e",
    remote = "https://github.com/bc-lee/rules_jvm_external",
)

# Load the android_extensions to provide remote android tools
remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_tools")

# Load the android_sdk_repository_extension to manage the Android SDK
android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# Android dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "android_deps",
    artifacts = [
        "androidx.annotation:annotation:1.9.1",
        "androidx.appcompat:appcompat:1.7.0",
        "androidx.emoji2:emoji2:1.5.0",
        "androidx.lifecycle:lifecycle-common:2.8.7",
        "androidx.lifecycle:lifecycle-runtime:2.8.7",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "android_deps")
