"""
This module contains build rules for Bazel Mobile Journey.
"""

module(
    name = "bazel_mobile_journey",
)

bazel_dep(
    name = "rules_java",
    version = "8.15.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.8",
)
bazel_dep(
    name = "rules_android",
    version = "0.6.5",
)
bazel_dep(
    name = "rules_kotlin",
    version = "2.1.8",
)
bazel_dep(
    name = "rules_apple",
    version = "4.1.2",
)
bazel_dep(
    name = "rules_swift",
    version = "3.1.2",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.22.1",
    repo_name = "build_bazel_apple_support",
)

# Not used directly, but required in certain configurations.
# For example, after https://github.com/bazelbuild/bazel/commit/e6979d3f878ddd663f15a10b09407ecbb9380fee,
# Bazel rolling (9.0.0-pre.20250714.1) will not work without this dependency.
bazel_dep(
    name = "rules_foreign_cc",
    version = "0.15.0",
)

git_override(
    module_name = "rules_android",
    commit = "0e702385024a40e690add0cf36269222e9c2c1bf",
    remote = "https://github.com/bazelbuild/rules_android",
)

# Load the android_extensions to provide remote android tools
remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_tools")

# Load the android_sdk_repository_extension to manage the Android SDK
android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# Android dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "android_deps",
    aar_import_bzl_label = "@rules_android//android:rules.bzl",
    artifacts = [
        "androidx.annotation:annotation:1.9.1",
        "androidx.appcompat:appcompat:1.7.1",
        "androidx.emoji2:emoji2:1.5.0",
        "androidx.lifecycle:lifecycle-common:2.9.2",
        "androidx.lifecycle:lifecycle-runtime:2.9.2",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)
use_repo(maven, "android_deps")
